authentication wizard progress (again)

--- a/packages/impoexpo-client/index.html
+++ b/packages/impoexpo-client/index.html
@@ -8,6 +8,10 @@
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
 
+  <script async defer src="https://apis.google.com/js/api.js" async></script>
+  <script src="https://accounts.google.com/gsi/client" async></script>
+
+
   <title>impoexpo</title>
   <!-- <link href="/favicon.ico" rel="icon" /> -->
 </head>
