--- a/packages/impoexpo-client/index.html
+++ b/packages/impoexpo-client/index.html
@@ -11,9 +11,8 @@
   <script async defer src="https://apis.google.com/js/api.js" async></script>
   <script src="https://accounts.google.com/gsi/client" async></script>
 
-
   <title>impoexpo</title>
-  <!-- <link href="/favicon.ico" rel="icon" /> -->
+  <link href="/favicon.png" rel="icon" />
 </head>
 
 <body>
