add recording utils

--- a/packages/impoexpo-client/index.html
+++ b/packages/impoexpo-client/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="preconnect" href="https://rsms.me/">
-  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-  <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script>
+  <link rel="preconnect" href="https://rsms.me/" crossorigin>
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css" crossorigin>
+  <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
 
   <script async defer src="https://apis.google.com/js/api.js" async></script>
   <script src="https://accounts.google.com/gsi/client" async></script>
