license, privacy policy, meta tags, documentation model & ui bugfixes

--- a/packages/impoexpo-client/wizard/index.html
+++ b/packages/impoexpo-client/wizard/index.html
@@ -10,6 +10,17 @@
   <script async defer src="https://apis.google.com/js/api.js" async></script>
   <script src="https://accounts.google.com/gsi/client" async></script>
 
+  <meta itemprop="name" content="impoexpo" />
+  <meta itemprop="description" content="a simpler way to transfer data" />
+
+  <meta property="og:title" content="impoexpo" />
+  <meta property="og:description" content="a simpler way to transfer data" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://impoexpo.ru/wizard" />
+  <meta property="og:image" content="https://impoexpo.ru/favicon.png" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:locale:alternate" content="ru_RU" />
+
   <title>impoexpo</title>
   <link href="../favicon.png" rel="icon" />
 </head>
